<resources>

    <string name="app_name">Bataille Navale</string>
    <string name="bataille">Bataille Navale</string>
    <string name="facile">Facile</string>
    <string name="difficile">Difficile</string>
    <string name="expert">Expert</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bataille_navale">Bataille Navale</string>
    <string name="ordinateur">Ordinateur</string>
    <string name="joueur">Joueur</string>
    <string name="title_activity_jeu">Jeu</string>
    <string name="aide">Pour déplacer vos bateaux, sélectionner le en appuyant dessus puis cliquez sur le nouvel emplacement</string>

</resources>