<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
    
    <TextView
        android:id="@+id/bataille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Helvetica"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bataille"
        android:textColor="#000000"
        android:textSize="16pt"
        tools:context=".BatailleNavale" />
    
    <TextView
        android:id="@+id/facile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bataille"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/facile"
        android:textColor="#000000"
        android:textSize="10pt"
        tools:context=".BatailleNavale" />

    <TextView
        android:id="@+id/difficile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facile"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/difficile"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="10pt"
        tools:context=".BatailleNavale" />

    <TextView
        android:id="@+id/expert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficile"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/expert"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="10pt"
        tools:context=".BatailleNavale" />

    <TextView
        android:id="@+id/aide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expert"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:textSize="8pt"
        android:text="@string/aide" />

</RelativeLayout>
